--- a/style.css
+++ b/style.css
@@ -60,6 +60,52 @@ body {
   background-color: tomato;
 }
 
+.thirdContainer {
+  width: 800px;
+  margin: 50px auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.thumbnail {
+  width: 50%;
+}
+
+.thumbnail img {
+  width: 100%;
+}
+
+/* Exercise */
+.fourthContainer {
+  width: 800px;
+  margin: 50px auto;
+  display: flex;
+}
+
+.card {
+  border: 1px solid gray;
+  background-color: #eee;
+  border-radius: 10px;
+  overflow: hidden;
+  margin: 10px;
+  flex: 1;
+}
+
+.card .header {
+  height: 150px;
+  background-color: gray;
+}
+
+.card .content {
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+.card.big {
+  transform: scale(1.12);
+}
+
 @media (min-width: 600px) {
   .secondContainer {
     display: flex;
@@ -68,5 +114,9 @@ body {
 
   .service {
     width: 30%;
+  }
+
+  .thumbnail {
+    width: 25%;
   }
 }
